feat: add API for feature delete link
